--- a/B4_Trovato_Carmine/css/style.css
+++ b/B4_Trovato_Carmine/css/style.css
@@ -9,14 +9,54 @@ body{
   background-color: #FFFDD7;
 }
 
+/*______CAROUSEL________*/ 
+.carousel {
+  position: center;
+  width: 60%;
+}
+
+.carousel-control.left {
+  margin-top: 265px;
+
+}
+.carousel-control.right {
+  margin-top: 265px;
+  right: 0;
+  left: auto;
+}
+
+
+/*______FORM________*/ 
+.form-group {
+  margin-bottom: 15px;
+  width: 85%;
+  color:#668f93;
+}
+
+.form-control{
+   width: 85%;
+   margin-bottom: 15px;
+   color:#d7ab6e;
+}
+
+
+/*______NAVIGATION________*/ 
+
 .nav-tabs > li.active > a,
 .nav-tabs > li.active > a:hover,
 .nav-tabs > li.active > a:focus {
   color: #FFF;
   cursor: default; 
   background-color: #668f93;
-  border: 2px solid #FFF;
-  border-bottom-color: transparent;
+  border: 1px solid #FFFDD7;
+  border-bottom-color: #FFFDD7;
+}
+
+.nav > li > a:hover,
+.nav > li > a:focus {
+  text-decoration: none;
+  color: #FFF;
+  background-color: #d7ab6e;
 }
 
 .nav-tabs > li > a:hover {
@@ -29,6 +69,11 @@ body{
   border-color: #668f93;
 }
 
+button {
+  overflow: visible;
+  background-color: #668f93;
+}
+
 .btn-primary:hover,
 .btn-primary:focus,
 .btn-primary:active,
@@ -39,20 +84,52 @@ body{
   border-color: #d7ab6e;
 }
 
+blockquote{
+  background-color: #FFFDD7;	
+}
+
+
 h1{
 	text-indent: -9999px;
-	background: url(../images/CTlogo2.png);
+	background: url(../images/CTlogo.png);
 	background-repeat: no-repeat;
 	padding-bottom: 5px;
+}
+
+h2{
+	font-family: Helvetica;
+	font-weight: bold;
+	color: #668f93;		
+}
+
+h3{
+	font-family: Helvetica;
+	font-weight: bold;
+	text-align: center;
+	color: #668f93;	
+
 }
 
 p{
 	font-size: 1.1em;
 	font-family: Helvetica;
-	font-style: bold;
 	color: #668f93;	
 }
 
+.social{
+	float: right;
+}
+
+.clientel{
+	text-align: center;
+
+
+}
+
+li {
+	text-align: right;
+	display: inline;
+}
 
 .pagination > li > a,
 .pagination > li > span {
@@ -74,6 +151,17 @@ p{
   color: #668f93;
   background-color: #d7ab6e;
   border-color: #d7ab6e;
+/*---------------------MEDIA QUERIES---------------------*/
+
+/*---------------- Mobile LOGO --------------- */
+@media screen and (min-width: 270px) and (max-width: 769px) {
+
+  h1{
+  text-indent: -9999px;
+  background: url(../images/CTlogo2mobile.png);
+  background-repeat: no-repeat;
+  padding-bottom: 5px;
+}
 }
 
 
@@ -81,3 +169,14 @@ p{
 footer{
 	text-align: center; 
 }
+
+
+
+
+@media screen and (min-width: 270px) and (max-width: 995px) {
+
+	.social{
+		display: none;
+		
+}
+	
