--- a/B9_Trovato_Carmine/css/style.css
+++ b/B9_Trovato_Carmine/css/style.css
@@ -126,6 +126,12 @@ header p{
 	box-shadow: 0 0 1px .5px #000;
 }
 
+
+.social{
+	float: right;
+}
+
+
 article h2{
 	margin-bottom: 5px;
 	color: #386EB2;
